crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__add_bound_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/add_bound_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class C (global @1) ∅
      (method f [(local this @0)] []
         (block)))
   (var f (global @2) (attr (call +2 (global C @1)) f))
   (expr (+ (global f @2) 42.0)))

----- stderr -----
