crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__assign_to_global_variable_in_function_defined_after_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/assign_to_global_variable_in_function_defined_after_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] []
      (block
         (expr (= (global-by-name a) 42.0))))
   (var a (global @2) 27.0)
   (print (global a @2))
   (print (call +3 (global f @1)))
   (print (global a @2)))

----- stderr -----
