crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__compare_different_functions.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/compare_different_functions.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun function (global @1) [] []
      (block))
   (var f (global @2) (global function @1))
   (fun function (global @1) [] []
      (block))
   (var g (global @3) (global function @1))
   (print (global f @2))
   (print (global g @3))
   (print (== (global f @2) (global f @2)))
   (print (== (global g @3) (global g @3)))
   (print (== (global f @2) (global g @3))))

----- stderr -----
